--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -8,9 +8,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace>
-    </RootNamespace>
-    <ProjectGuid>{C503FFED-0F2F-7397-D33D-2AF47D0C0409}</ProjectGuid>
+    <RootNamespace></RootNamespace>
+    <ProjectGuid>{9521920E-A3D1-01C8-0D29-8FF8E759F64F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -67,6 +66,7 @@
     <Compile Include="Assets\Scripts\Helper Scripts\GameplayController.cs" />
     <Compile Include="Assets\Scripts\Helper Scripts\MapGenerator.cs" />
     <Compile Include="Assets\Scripts\Helper Scripts\OffScreen.cs" />
+    <Compile Include="Assets\Scripts\Helper Scripts\SoundManager.cs" />
     <Compile Include="Assets\Scripts\MyTags.cs" />
     <Compile Include="Assets\Scripts\Obstacles Scripts\ObstaclesHolder.cs" />
     <Compile Include="Assets\Scripts\Player Scripts\AnimationEvents.cs" />
@@ -687,8 +687,7 @@
       <HintPath>C:/Users/$813100-HPU8SJ1J0S2N/Documents/GitHub/InfiniteRunner/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup>
-  </ItemGroup>
+  <ItemGroup></ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
