--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,7 +63,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Helper Scripts\CharacterSelectScript.cs" />
     <Compile Include="Assets\Scripts\Helper Scripts\GameplayController.cs" />
+    <Compile Include="Assets\Scripts\Helper Scripts\MainMenuController.cs" />
     <Compile Include="Assets\Scripts\Helper Scripts\MapGenerator.cs" />
     <Compile Include="Assets\Scripts\Helper Scripts\OffScreen.cs" />
     <Compile Include="Assets\Scripts\Helper Scripts\SoundManager.cs" />
