--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Helper Scripts\CharacterSelectScript.cs" />
+    <Compile Include="Assets\Scripts\Helper Scripts\GameData.cs" />
+    <Compile Include="Assets\Scripts\Helper Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\Helper Scripts\GameplayController.cs" />
     <Compile Include="Assets\Scripts\Helper Scripts\MainMenuController.cs" />
     <Compile Include="Assets\Scripts\Helper Scripts\MapGenerator.cs" />
